--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,8 @@
                         <textarea class="form-control" id="threadContent" placeholder="Thread Content" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <input type="text" class="form-control" id="authorName" placeholder="Your Name" required>
+                        <input type="text" class="form-control" id="authorName" placeholder="Your Name (optional)">
+                        <small class="text-muted">Leave empty to post as Anonymous</small>
                     </div>
                     <button type="submit" class="btn btn-primary">Create Thread</button>
                 </form>
@@ -62,7 +63,8 @@
                             <textarea class="form-control comment-content" placeholder="Your comment" required></textarea>
                         </div>
                         <div class="mb-3">
-                            <input type="text" class="form-control comment-author" placeholder="Your Name" required>
+                            <input type="text" class="form-control comment-author" placeholder="Your Name (optional)">
+                            <small class="text-muted">Leave empty to post as Anonymous</small>
                         </div>
                         <button type="submit" class="btn btn-sm btn-primary">Add Comment</button>
                     </form>
