--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discussion Board</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./assets/index.css">
 </head>
 <body>
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1>Discussion Board</h1>
-            <a href="create.html" class="btn btn-primary">Create New Thread</a>
+            <a href="./create/index.html" class="btn btn-primary">Create New Thread</a>
         </div>
         
         <!-- Threads List -->
@@ -56,6 +56,6 @@
         </div>
     </template>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./assets/index.js"></script>
 </body>
 </html>
