--- a/frontend/create.html
+++ b/frontend/create.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Thread - Discussion Board</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1>Create New Thread</h1>
-            <a href="index.html" class="btn btn-outline-secondary">Back to Threads</a>
+            <button onclick="window.location.href='/'" class="btn btn-outline-secondary">Back to Threads</button>
         </div>
         
         <!-- New Thread Form -->
@@ -33,13 +33,13 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <button type="submit" class="btn btn-primary">Create Thread</button>
-                        <a href="index.html" class="btn btn-link">Cancel</a>
+                        <button type="button" onclick="window.location.href='/'" class="btn btn-link">Cancel</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
-    <script type="module" src="create.js"></script>
+    <script type="module" src="/create.js"></script>
 </body>
 </html>
